   in insert mode

2016-01-20: v1.5.3

 * bugfix: various fixes for evaluate/vi F7

2016-01-30: v1.5.4

 * bugfix: vi :w didn't work with filenames longer than 6 characters
 * bugfix: vi :w! captured control characters in filename
 * bugfix: changed vi :w to avoid 1541 bugs
 * editor: improved feedback when saving
 * editor: stop using backup files
 * forth: added require, required
 * doc: documented assembler, sid

2016-02-02: v1.6.0 - cartridge support!

 * forth: now available as a 16 kB cartridge image. the cartridge
   has the same functionality as the disk version, but boots faster.
 * forth: removed gfx from standard modules
 * forth: dropped all usage of BASIC (including float module)
 * forth: moved rarely used words to compat module
 * asm: renamed zptmp zptmp2 zptmp3 => w w2 w3
 * asm: renamed sp0 sp1 => lsb msb
 * gfx: moved bitmap graphics area from $8c00-$8fff, $a000-$bfff
   to $cc00-$cfff, $e000-$ffff
 * doc: expanded assembler documentation
 * editor: removed fg

2016-02-10: v1.6.1

 * forth: evaluate failed for strings that ended at page boundary
 * forth: print error in case include fails
 * forth: space optimize of
 * forth: moved 2over, 2swap to compat
 * cart: made cartridge boot faster
 * cart: use Simons' Basic cart type to make $a000-$bfff RAM
 * editor: starting without filename now doesn't read from disk
 * editor: :w on unnamed buffer now prints "no filename"

2017-08-03: v1.6.2

 * forth: various see improvements
 * forth: moved >body to compat

2017-10-07: v1.6.3

 * bring back float module

2018-04-22: v1.6.4

 * forth: INCLUDED now interprets the file
 * forth: added ?DO
 * forth: added DEFER DEFER! IS to compat
 * forth: made loadb return address after last written byte
 * debug: made see show branch

2018-10-24: v1.6.5

 * editor: fixed dd crash at end of buffer
 * editor: slower key repeat settings
 * editor: made f7 work in insert mode

UNRELEASED

[Changed]
 * sprite: sp-data uses . instead of bl to set 0 bits